AndroidX Navigation done. Added new animations

--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -1,24 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/main_graph" app:startDestination="@id/splashFragment">
+            android:id="@+id/main_graph"
+            app:startDestination="@id/splashFragment">
 
     <fragment android:id="@+id/splashFragment" android:name="com.example.android.bigbuttoncalculator.SplashFragment"
               android:label="SplashFragment">
-        <action android:id="@+id/action_splashFragment_to_lightFragment" app:destination="@id/lightFragment"/>
-        <action android:id="@+id/action_splashFragment_to_darkFragment" app:destination="@id/darkFragment"/>
+        <action android:id="@+id/action_splashFragment_to_lightFragment"
+                app:destination="@id/lightFragment"
+                app:popUpTo="@id/splashFragment"
+                app:popUpToInclusive="true"/>
+        <action android:id="@+id/action_splashFragment_to_darkFragment"
+                app:destination="@id/darkFragment"
+                app:popUpTo="@id/splashFragment"
+                app:popUpToInclusive="true"/>
     </fragment>
-    <fragment android:id="@+id/darkFragment" android:name="com.example.android.bigbuttoncalculator.DarkFragment"
+    <fragment android:id="@+id/darkFragment"
+              android:name="com.example.android.bigbuttoncalculator.DarkFragment"
               android:label="DarkFragment">
-        <action android:id="@+id/action_darkFragment_to_menuFragment" app:destination="@id/menuFragment"/>
+        <action android:id="@+id/action_darkFragment_to_menuFragment"
+                app:destination="@id/menuFragment"/>
     </fragment>
-    <fragment android:id="@+id/lightFragment" android:name="com.example.android.bigbuttoncalculator.LightFragment"
+    <fragment android:id="@+id/lightFragment"
+              android:name="com.example.android.bigbuttoncalculator.LightFragment"
               android:label="LightFragment">
-        <action android:id="@+id/action_lightFragment_to_menuFragment" app:destination="@id/menuFragment"/>
+        <action android:id="@+id/action_lightFragment_to_menuFragment"
+                app:destination="@id/menuFragment"/>
     </fragment>
-    <fragment android:id="@+id/menuFragment" android:name="com.example.android.bigbuttoncalculator.MenuFragment"
+    <fragment android:id="@+id/menuFragment"
+              android:name="com.example.android.bigbuttoncalculator.MenuFragment"
               android:label="MenuFragment">
-        <action android:id="@+id/action_menuFragment_to_darkFragment" app:destination="@id/darkFragment"/>
-        <action android:id="@+id/action_menuFragment_to_lightFragment" app:destination="@id/lightFragment"/>
+        <action android:id="@+id/action_menuFragment_to_darkFragment"
+                app:destination="@id/darkFragment"/>
+        <action android:id="@+id/action_menuFragment_to_lightFragment"
+                app:destination="@id/lightFragment"/>
     </fragment>
 </navigation>
