--- a/app/src/main/res/layout/dark_fragment_layout.xml
+++ b/app/src/main/res/layout/dark_fragment_layout.xml
@@ -1,298 +1,275 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
 
 
 
-                                                     style="@style/colorAppBackgroundDarkT"
-                                                     android:layout_width="fill_parent"
-                                                     android:layout_height="fill_parent"
-                                                     android:gravity="end"
-                                                     android:orientation="vertical"
-                                                     android:weightSum="7"
-
+                                                   style="@style/colorAppBackgroundDarkT"
+                                                   android:layout_width="fill_parent"
+                                                   android:layout_height="fill_parent"
+                                                   android:gravity="end"
+                                                   android:orientation="vertical"
+                                                   android:weightSum="7"
 
 
 >
 
 
+    <TextView
+            android:id="@+id/operationLine"
+            style="@style/colorDisplayTextLight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0123opline"
+            android:fontFamily="@font/seguisb"
 
-    <androidx.drawerlayout.widget.DrawerLayout
+            android:textSize="40sp" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintTop_toTopOf="parent"/>
 
-            android:id="@+id/drawerLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <TextView
+            android:id="@+id/resultLine"
+            style="@style/colorDisplayTextLight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/seguisb"
+            android:letterSpacing="-0.02"
+            android:singleLine="true"
+            android:text="0123resline"
+            android:textSize="70sp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.947"
+            app:layout_constraintTop_toBottomOf="@+id/operationLine"/>
 
 
+    <Button
+            android:id="@+id/btn_reset"
+            style="@style/buttonOperationResetLight"
 
+            android:maxLines="1"
 
 
 
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"
 
-        <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="2"
-                android:gravity="end"
-                android:orientation="vertical"
-                android:padding="0dp">
 
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btn_seven"/>
 
-            <TextView
-                    android:id="@+id/operationLine"
-                    style="@style/colorDisplayTextDarkT"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+    <Button
+            android:id="@+id/btn_seven"
+            style="@style/buttonNumberSevenLight"
 
-                    android:fontFamily="@font/ds"
 
-                    android:textSize="40sp" />
 
-            <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1px"
-                    android:background="@android:color/black" />
 
-            <TextView
-                    android:id="@+id/resultLine"
-                    style="@style/colorDisplayTextDarkT"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="0dp"
-                    android:fontFamily="@font/ds"
-                    android:letterSpacing="-0.02"
-                    android:singleLine="true"
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btn_four"/>
 
-                    android:textSize="70sp" />
+    <Button
+            android:id="@+id/btn_four"
+            style="@style/buttonNumberFourLight"
 
-        </LinearLayout>
 
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btn_one"/>
 
-        <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="0dp"
-                android:layout_weight="5"
-                android:gravity="bottom"
-                android:orientation="horizontal"
-                android:weightSum="4"
-                android:baselineAligned="false">
+    <Button
+            android:id="@+id/btn_one"
 
+            style="@style/buttonNumberOneLight"
 
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
 
-                <Button
-                        android:id="@+id/btn_reset"
-                        style="@style/buttonDeleteDarkT"
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btn_zero"/>
 
-                        android:maxLines="1"
-                        android:onClick="resetClick"
-                        android:text="@string/ac"
+    <Button
+            android:id="@+id/btn_zero"
+            style="@style/buttonNumberZeroLight"
+            android:layout_gravity="center"
 
-                />
 
-                <Button
-                        android:id="@+id/btn_seven"
-                        style="@style/buttonNumberDarkT"
+            android:layout_marginBottom="4dp"
+            app:layout_constraintBottom_toBottomOf="parent"
 
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+    />
 
-                        android:onClick="onNumberClick"
-                        android:text="@string/_7"
 
+    <Button
+            android:id="@+id/btn_percentage"
+            style="@style/buttonOperationPercentageLight"
 
-                />
 
-                <Button
-                        android:id="@+id/btn_four"
-                        style="@style/buttonNumberDarkT"
 
-                        android:onClick="onNumberClick"
-                        android:text="@string/_4" />
 
-                <Button
-                        android:id="@+id/btn_one"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/btn_eight" app:layout_constraintStart_toEndOf="@+id/btn_reset"
+            android:layout_marginStart="8dp"/>
 
-                        style="@style/buttonNumberDarkT"
+    <Button
+            android:id="@+id/btn_eight"
+            style="@style/buttonNumberEightLight"
 
-                        android:onClick="onNumberClick"
-                        android:text="@string/_1" />
 
-                <Button
-                        android:id="@+id/btn_zero"
-                        style="@style/buttonNumberDarkT"
 
-                        android:onClick="onNumberClick"
-                        android:text="@string/_0" />
 
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/btn_five" app:layout_constraintStart_toEndOf="@+id/btn_seven"
+            android:layout_marginStart="8dp"/>
 
-            </LinearLayout>
+    <Button
+            android:id="@+id/btn_five"
+            style="@style/buttonNumberFiveLight"
 
 
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
 
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/btn_two" app:layout_constraintStart_toEndOf="@+id/btn_four"
+            android:layout_marginStart="8dp"/>
 
-                <Button
-                        android:id="@+id/btn_percentage"
-                        style="@style/buttonOperationPercentageDarkT"
+    <Button
+            android:id="@+id/btn_two"
+            style="@style/buttonNumberTwoLight"
 
 
-                        android:text="@string/_Percent"
 
 
-                />
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/btn_dot" app:layout_constraintStart_toEndOf="@+id/btn_one"
+            android:layout_marginStart="8dp"/>
 
-                <Button
-                        android:id="@+id/btn_eight"
-                        style="@style/buttonNumberDarkT"
 
-                        android:onClick="onNumberClick"
-                        android:text="@string/_8"
+    <Button
+            android:id="@+id/btn_dot"
+            style="@style/buttonNumberDotLight"
 
 
-                />
 
-                <Button
-                        android:id="@+id/btn_five"
-                        style="@style/buttonNumberDarkT"
 
-                        android:onClick="onNumberClick"
-                        android:text="@string/_5" />
 
-                <Button
-                        android:id="@+id/btn_two"
-                        style="@style/buttonNumberDarkT"
+            app:layout_constraintBottom_toBottomOf="parent"
 
-                        android:onClick="onNumberClick"
-                        android:text="@string/_2" />
+            app:layout_constraintStart_toEndOf="@+id/btn_zero" android:layout_marginStart="8dp"/>
 
 
-                <Button
-                        android:id="@+id/btn_dot"
-                        style="@style/buttonNumberDarkT"
+    <Button
+            android:id="@+id/btn_divide"
+            style="@style/buttonOperationDivideLight"
 
-                        android:onClick="onNumberClick"
-                        android:text="@string/_Dot"
 
 
-                />
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/btn_nine" app:layout_constraintStart_toEndOf="@+id/btn_percentage"
+            android:layout_marginStart="8dp"/>
 
 
-            </LinearLayout>
+    <Button
+            android:id="@+id/btn_nine"
+            style="@style/buttonNumberNineLight"
 
 
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
 
 
-                <Button
-                        android:id="@+id/btn_divide"
-                        style="@style/buttonOperationDivideDarkT"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/btn_six" app:layout_constraintStart_toEndOf="@+id/btn_eight"
+            android:layout_marginStart="8dp"/>
 
-                        android:text="@string/_Divide"
+    <Button
+            android:id="@+id/btn_six"
+            style="@style/buttonNumberSixLight"
 
-                />
 
 
-                <Button
-                        android:id="@+id/btn_nine"
-                        style="@style/buttonNumberDarkT"
 
-                        android:onClick="onNumberClick"
-                        android:text="@string/_9"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/btn_three" app:layout_constraintStart_toEndOf="@+id/btn_five"
+            android:layout_marginStart="8dp"/>
 
+    <Button
+            android:id="@+id/btn_three"
+            style="@style/buttonNumberThreeLight"
 
-                />
 
-                <Button
-                        android:id="@+id/btn_six"
-                        style="@style/buttonNumberDarkT"
 
-                        android:onClick="onNumberClick"
-                        android:text="@string/_6"
 
-                />
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/btn_back" app:layout_constraintStart_toEndOf="@+id/btn_two"
+            android:layout_marginStart="8dp"/>
 
-                <Button
-                        android:id="@+id/btn_three"
-                        style="@style/buttonNumberDarkT"
 
-                        android:onClick="onNumberClick"
-                        android:text="@string/_3"
+    <Button
+            android:id="@+id/btn_back"
+            style="@style/buttonOperationBackspaceLight"
 
-                />
 
 
-                <Button
-                        android:id="@+id/btn_back"
-                        style="@style/buttonDeleteDarkT"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/btn_dot" android:layout_marginStart="8dp"/>
 
-                        android:onClick="backspaceClick"
-                        android:text="@string/_Backspace" />
 
+    <Button
+            android:id="@+id/btn_multiple"
+            style="@style/buttonOperationMultiplyLight"
 
-            </LinearLayout>
 
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btn_minus"
+            app:layout_constraintStart_toEndOf="@+id/btn_divide" android:layout_marginStart="8dp"/>
 
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:weightSum="5">
+    <Button
+            android:id="@+id/btn_minus"
 
+            style="@style/buttonOperationMinusLight"
 
-                <Button
-                        android:id="@+id/btn_multiple"
-                        style="@style/buttonOperationMultiplyDarkT"
 
-                        android:text="@string/_Multiple" />
 
-                <Button
-                        android:id="@+id/btn_minus"
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/btn_nine"
+            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/btn_plus"/>
 
-                        style="@style/buttonOperationMinusDarkT"
+    <Button
+            android:id="@+id/btn_plus"
+            style="@style/buttonOperationPlusLight"
 
 
-                        android:text="@string/_Minus" />
 
-                <Button
-                        android:id="@+id/btn_plus"
-                        style="@style/buttonOperationPlusDarkT"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/btn_six"
+            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/btn_equal"/>
 
 
-                        android:text="@string/_Plus" />
+    <Button
+            android:id="@+id/btn_equal"
+            style="@style/buttonOperationEqualDarkT"
 
 
-                <Button
-                        android:id="@+id/btn_equal"
-                        style="@style/buttonOperationEqualDarkT"
 
-                        android:text="@string/_Equal"
-
-                />
-
-
-            </LinearLayout>
-
-        </LinearLayout>
-        <ListView
-                android:id="@+id/drawerList"
-                android:layout_width="200dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="start"
-                android:background="#ffeeeeee"/>
-
-    </androidx.drawerlayout.widget.DrawerLayout>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toEndOf="@+id/btn_back" android:layout_marginStart="8dp"/>
+    <Button
+            android:layout_width="52dp"
+            android:layout_height="40dp"
+            android:id="@+id/menuButton"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:background = "@drawable/btn_cooking_mode"
+    />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
