--- a/app/src/main/res/layout/themes_menu.xml
+++ b/app/src/main/res/layout/themes_menu.xml
@@ -6,99 +6,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="60sp"
-            android:text="THEMES"
-            android:textSize="24sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
-    <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="60sp"
-            android:text="THEMES"
-            android:textSize="24sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
-    <Button
-            android:id="@+id/light_theme_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="20sp"
-            android:text="Light"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"/>
 
-    <Button
-            android:id="@+id/dark_theme_button"
-            android:layout_width="wrap_content"
-            android:layout_height="51dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="12dp"
-            android:text="Dark"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/light_theme_button" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"/>
 
-    <TextView
-            android:id="@+id/textView"
+
+
+    <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="60sp"
-            android:text="THEMES"
-            android:textSize="24dp"
+            android:layout_height="wrap_content" app:srcCompat="@drawable/img_cooking_mode"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
-    <ListView
-            android:id="@+id/listView"
-            android:layout_width="139dp"
-            android:layout_height="50dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView5"/>
-    <TextView
-            android:text="@string/settings"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView4"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            android:textSize="24dp"
-            android:layout_marginTop="60dp"
-            app:layout_constraintTop_toBottomOf="@+id/dark_theme_button"/>
+            android:id="@+id/imageView" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="24dp" android:layout_marginStart="24dp"/>
+    <Switch
+            android:id="@+id/cooking_Switch_button"
+            style="@style/buttonCooking"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:checked="false"
+            app:layout_constraintTop_toTopOf="@+id/imageView" app:layout_constraintBottom_toBottomOf="@+id/imageView"
+            app:layout_constraintVertical_bias="0.60" app:layout_constraintHorizontal_bias="0.498"
 
-    <SeekBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/seekBar"
-            app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp" android:layout_marginTop="20dp"/>
-    <TextView
-            android:text="@string/btn_sizing"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/textView5" app:layout_constraintTop_toBottomOf="@+id/textView4"
-            android:layout_marginTop="20dp" android:textSize="20dp"/>
-    <TextView
-            android:text="@string/number_sizing"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/textView6" android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/listView" android:textSize="20dp"/>
+    />
 </androidx.constraintlayout.widget.ConstraintLayout>
