--- a/app/src/main/res/layout/themes_menu.xml
+++ b/app/src/main/res/layout/themes_menu.xml
@@ -15,21 +15,21 @@
             android:id="@+id/imageView"
             android:layout_marginEnd="24dp" android:layout_marginStart="24dp"
             android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
-    <Switch
+    <Button
             android:id="@+id/cooking_Switch_button"
             style="@style/buttonCooking"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:checked="false"
             app:layout_constraintTop_toTopOf="@+id/imageView" app:layout_constraintBottom_toBottomOf="@+id/imageView"
-            app:layout_constraintVertical_bias="0.60" app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintVertical_bias="0.63" app:layout_constraintHorizontal_bias="0.498"
 
     />
     <TextView
-            android:text="COOKING MODE"
+            android:text="@string/cooking_mode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView" android:layout_marginTop="32dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:textSize="36dp"/>
+            android:textSize="36sp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
