All animation work fine.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,7 @@
     <color name="colorDisplayText">#000000</color>
 
 
-    <color name="colorPlusButton">#0080FF</color>
+    <color name="colorPlusButton">#F1F5FA</color>
     <color name="colorMultiplyButton">#00BBA5</color>
     <color name="colorDivideButton">#FF2776</color>
     <color name="colorMinusButton">#FF3838</color>
