--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -7,8 +7,8 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/animatedImage"
-        android:layout_height="100dp"
-        android:layout_width="100dp"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
 
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
