--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -19,20 +19,25 @@
               android:name="com.example.android.bigbuttoncalculator.DarkFragment"
               android:label="DarkFragment">
         <action android:id="@+id/action_darkFragment_to_menuFragment"
-                app:destination="@id/menuFragment"/>
+                app:destination="@id/menuFragment" app:enterAnim="@anim/fade_in"
+        />
     </fragment>
     <fragment android:id="@+id/lightFragment"
               android:name="com.example.android.bigbuttoncalculator.LightFragment"
               android:label="LightFragment">
         <action android:id="@+id/action_lightFragment_to_menuFragment"
-                app:destination="@id/menuFragment"/>
+                app:destination="@id/menuFragment"
+                app:enterAnim="@anim/fragment_fade_enter" app:exitAnim="@anim/fragment_fade_exit"
+                app:popEnterAnim="@anim/fragment_open_enter" app:popExitAnim="@anim/fragment_open_exit"/>
     </fragment>
     <fragment android:id="@+id/menuFragment"
               android:name="com.example.android.bigbuttoncalculator.MenuFragment"
               android:label="MenuFragment">
         <action android:id="@+id/action_menuFragment_to_darkFragment"
-                app:destination="@id/darkFragment"/>
+                app:destination="@id/darkFragment"
+                app:enterAnim="@anim/fade_in"/>
         <action android:id="@+id/action_menuFragment_to_lightFragment"
-                app:destination="@id/lightFragment"/>
+                app:destination="@id/lightFragment"
+                app:enterAnim="@anim/fade_in"/>
     </fragment>
 </navigation>
