--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -381,8 +381,19 @@
     <style name="buttonCooking">
 
 
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">0dp</item>
+    <item name="android:layout_width">168dp</item>
+    <item name="android:layout_height">168dp</item>
+
+    <item name="layout_constraintHeight_percent">0.3</item>
+    <item name="layout_constraintWidth_percent">0.5</item>
+
+
+</style>
+    <style name="resultLine">
+
+
+        <item name="android:layout_width">168dp</item>
+        <item name="android:layout_height">168dp</item>
 
         <item name="layout_constraintHeight_percent">0.3</item>
         <item name="layout_constraintWidth_percent">0.5</item>
