--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -9,7 +9,8 @@
         android:id="@+id/animatedImage"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         app:srcCompat="@drawable/animation" />
