--- a/app/src/main/res/layout/light_fragment_layout.xml
+++ b/app/src/main/res/layout/light_fragment_layout.xml
@@ -56,7 +56,7 @@
                     style="@style/colorDisplayTextLight"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-
+                    android:letterSpacing="-0.04"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
