--- a/app/src/main/res/layout/light_fragment_layout.xml
+++ b/app/src/main/res/layout/light_fragment_layout.xml
@@ -65,7 +65,7 @@
                     android:maxLines="2"
                     android:textSize="40sp"
                     android:layout_weight="5"
-
+                    android:lineSpacingMultiplier="1"
                     />
         </LinearLayout>
 
@@ -78,7 +78,7 @@
                 android:gravity="end"
                 android:layout_marginEnd="16dp"
                 android:ellipsize="none"
-                android:textSize="48sp"
+                android:textSize="46sp"
                 android:fontFamily="@font/seguisb"
                 android:letterSpacing="-0.04"
                 android:singleLine="true"
