--- a/app/src/main/res/layout/dark_fragment_layout.xml
+++ b/app/src/main/res/layout/dark_fragment_layout.xml
@@ -5,6 +5,7 @@
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         style="@style/colorAppBackgroundDarkT"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -25,16 +26,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:orientation="horizontal"
-                android:weightSum="6"
+                android:weightSum="5"
                 android:layout_weight="3"
                 android:gravity="top"
 
-                >
+                tools:ignore="NestedWeights">
             <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:weightSum="7"
+                    android:weightSum="10"
                     android:layout_weight="1"
 
                     ><Button
@@ -45,8 +46,9 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:background="@drawable/btn_cooking_mode"
-                    android:layout_weight="2"
+                    android:layout_weight="3"
                     android:gravity="top"
+                    android:contentDescription="@string/layout_selector"
                     />
             </LinearLayout>
 
@@ -57,15 +59,16 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:letterSpacing="-0.04"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginStart="8dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
                     android:fontFamily="@font/seguisb"
                     android:textAlignment="textEnd"
                     android:maxLines="2"
                     android:textSize="40sp"
-                    android:layout_weight="5"
-
+                    android:layout_weight="4"
+                    android:lineSpacingMultiplier="1"
+                    android:contentDescription="@string/evaluation_line"
                     />
         </LinearLayout>
 
@@ -84,6 +87,7 @@
                 android:singleLine="true"
                 android:textAlignment="textEnd"
                 android:layout_weight="2"
+                android:contentDescription="@string/result_line"
                 />
     </LinearLayout>
 
@@ -95,7 +99,7 @@
             android:layout_weight="7"
 
 
-            >
+            android:baselineAligned="false">
 
         <LinearLayout
                 android:layout_width="0dp"
@@ -106,7 +110,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginBottom="8dp"
 
-                >
+                tools:ignore="NestedWeights">
 
             <Button
                     android:id="@+id/btn_reset"
@@ -114,7 +118,7 @@
                     android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-
+                    android:contentDescription="@string/reset_button"
                     android:maxLines="1"
                     />
 
@@ -124,7 +128,7 @@
                     android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-
+                    android:contentDescription="@string/button_7"
                     />
 
             <Button
@@ -133,7 +137,7 @@
                     android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-
+                    android:contentDescription="@string/button_4"
                     />
 
             <Button
@@ -142,7 +146,7 @@
                     style="@style/buttonNumberOneLight"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-
+                    android:contentDescription="@string/button_4"
                     />
 
             <Button
@@ -152,7 +156,7 @@
                     android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-
+                    android:contentDescription="@string/button_0"
                     />
 
         </LinearLayout>
@@ -173,6 +177,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:maxLines="1"
+                    android:contentDescription="@string/button_percentage"
                     />
 
             <Button
@@ -181,6 +186,7 @@
                     android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
+                    android:contentDescription="@string/button_8"
                     />
 
             <Button
@@ -189,7 +195,7 @@
                     android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-
+                    android:contentDescription="@string/button_5"
                     />
 
             <Button
@@ -198,7 +204,7 @@
                     android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-
+                    android:contentDescription="@string/button_2"
                     />
 
             <Button
@@ -208,7 +214,7 @@
                     android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-
+                    android:contentDescription="@string/button_dot"
                     />
 
         </LinearLayout>
@@ -228,6 +234,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:maxLines="1"
+                    android:contentDescription="@string/button_division"
                     />
 
             <Button
@@ -236,6 +243,7 @@
                     android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
+                    android:contentDescription="@string/button_9"
                     />
 
             <Button
@@ -244,6 +252,7 @@
                     android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
+                    android:contentDescription="@string/button_6"
                     />
 
             <Button
@@ -252,6 +261,7 @@
                     android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
+                    android:contentDescription="@string/button_3"
                     />
 
             <Button
@@ -261,6 +271,7 @@
                     android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
+                    android:contentDescription="@string/button_backspace"
                     />
 
         </LinearLayout>
@@ -281,6 +292,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:maxLines="1"
+                    android:contentDescription="@string/button_multiply"
                     />
 
             <Button
@@ -289,6 +301,7 @@
                     android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
+                    android:contentDescription="@string/button_minus"
                     />
 
             <Button
@@ -297,6 +310,7 @@
                     android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
+                    android:contentDescription="@string/button_plus"
                     />
 
             <Button
@@ -305,6 +319,7 @@
                     android:layout_weight="2"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
+                    android:contentDescription="@string/button_equal"
                     />
         </LinearLayout>
     </LinearLayout>
