--- a/app/src/main/res/layout/themes_menu.xml
+++ b/app/src/main/res/layout/themes_menu.xml
@@ -15,7 +15,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView"
-            app:srcCompat="@drawable/img_cooking_mode" />
+            app:srcCompat="@drawable/img_cooking_mode"
+            android:contentDescription="@string/mainview" />
 
     <Button
             android:id="@+id/cooking_Switch_button"
@@ -27,7 +28,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/imageView"
             app:layout_constraintVertical_bias="0.625"
-
+            android:contentDescription="@string/switcher_between_fragments"
             />
 
     <TextView
